--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,9 @@
     ],
     "require": {
         "php": ">=7.4"
+    },
+  "require-dev": {
+    "phpunit/phpunit": "^9",
+    "10up/wp_mock": "dev-trunk"
     }
 }
