--- a/composer.json
+++ b/composer.json
@@ -22,16 +22,27 @@
     }
   ],
   "require": {
-    "php": ">=8.0"
+    "php": ">=7.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9",
+    "phpunit/phpunit": "9.6.x-dev",
     "10up/wp_mock": "dev-trunk",
-    "squizlabs/php_codesniffer": "4.0.x-dev"
+    "squizlabs/php_codesniffer": "^3.0@dev",
+    "phpcompatibility/php-compatibility": "^10.0@dev",
+    "rector/rector": "dev-main"
   },
   "scripts": {
     "test": "phpunit",
     "check-style": "phpcs src tests",
-    "fix-style": "phpcbf src tests"
+    "fix-style": "phpcbf src tests",
+    "check-compatibility": [
+      "@php vendor/bin/phpcs --standard=PHPCompatibility --runtime-set testVersion 7.4- src/",
+      "@php vendor/bin/rector process src --dry-run"
+    ]
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
